2005-04-29  Albert Chu  <chu11@llnl.gov>

	* Added parse_options function to config modules.

	* Create new libmodule for common parse_options code between
	  clusterlist and config modules.

	* Putting module search and loading into libcerebro.

	* Rework cerebrod to use new libcerebro module functions.

	* Remove -c and -m options from cerebrod in non-debug mode.
	
2005-04-28  Albert Chu  <chu11@llnl.gov>

	* Re-worked packet unmarshalling logic.

	* Fixed updown server to handle more error conditions.

	* Allow updown server to return invalid packet format error code.

	* Shorten hostnames in hostsfile clusterlist module.

	* src/cerebrod/cerebrod_updown.c
	(_cerebrod_updown_create_and_setup_socket): Turn on SO_REUSEADDR
	for server debugging.

	* Finished first round of libcerebro updown API.

	* Put all lib functions under just cerebro.h.

2005-04-27  Albert Chu  <chu11@llnl.gov>

	* Re-worked modules to not exit on errors, error handling is now
	the reponsibility of the caller.

	* Re-worked cerebrod daemon around above changes.
	
2005-04-26  Albert Chu  <chu11@llnl.gov>

	* Continued libcerebro updown library work.

	* Fixed packet unmarshalling bugs in cerebrod.

	* Fixed various corner case bugs in cerebrod server.
	
2005-04-25  Albert Chu  <chu11@llnl.gov>

	* Added support to search for arbitrary modules rather than only
	those defined.

	* Various build fixes.

	* Continued code cleanup and minor bug fixing.

	* Begin work on cerebro updown API.
	
2005-04-22  Albert Chu  <chu11@llnl.gov>

	* src/libcerebro/cerebrod_config_module.h: Renamed to
	cerebro_config_module.h.  All variable names changed/adjusted
	appropriately.

	* Reworked cerebrod based on variable name changes and header file
	renaming.

	* Various re-work, slight design changes, and code cleanup to
	prepare for libcerebro updown library.

	* cerebro.spec.in: Updated for builds.

	* Fixed distcheck errors throughout.
	
2005-04-21  Albert Chu  <chu11@llnl.gov>
