@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebro.h,v 1.7 2005-04-28 23:36:23 achu Exp $
+ *  $Id: cerebro.h,v 1.8 2005-04-29 22:42:08 achu Exp $
 \*****************************************************************************/
 
 #ifndef _CEREBRO_H
@@ -22,9 +22,10 @@
 #define CEREBRO_ERR_NODE_NOTFOUND        14
 #define CEREBRO_ERR_OUTMEM               15 
 #define CEREBRO_ERR_CONFIG               16
-#define CEREBRO_ERR_MODULES              17
-#define CEREBRO_ERR_INTERNAL             18
-#define CEREBRO_ERR_ERRNUMRANGE          19
+#define CEREBRO_ERR_CLUSTERLIST_MODULE   17
+#define CEREBRO_ERR_CONFIG_MODULE        18
+#define CEREBRO_ERR_INTERNAL             19
+#define CEREBRO_ERR_ERRNUMRANGE          20
 
 typedef struct cerebro *cerebro_t;
 
