@@ -10,6 +10,8 @@
 	* Rework cerebrod to use new libcerebro module functions.
 
 	* Remove -c and -m options from cerebrod in non-debug mode.
+
+	* Support clusterlist modules in libcerebro updown library.
 	
 2005-04-28  Albert Chu  <chu11@llnl.gov>
 
